get reactions
