# app/controllers/v1/reactions_controller.rb
@@ -1,0 +1,7 @@
+module V1
+  class ReactionsController < ApplicationController
+    def index
+      @reactions = Reaction.all
+    end
+  end
+end
